# MarketWatch

./: .gitignore  CMakeLists.txt  README.md  account.cpp  account.h  build-rest-bed.sh  driver.cpp  env.sh  libstructs.cpp  libstructs.h  linkedList  makefile  market.cpp  market.h  marketwatch  notes  notes on libcurl  position.cpp  position.h  run-no-make.sh  run.sh  stock.cpp  stock.h  test.txt  testcmake.sh  timeSeriesDB.cpp  timeSeriesDB.h  user.cpp  user.h
.archieved/: makefile(old)
AI/: README.md  ai.h  successEval.h
app/: CMakeLists.txt  README.md  driver.cpp
backend/: CMakeLists.txt
backend/include/: account.h  api.h  appStructs.h  library.h  market.h  position.h  stock.h  timeSeriesDB.h  user.h
backend/src/: account.cpp  api.cpp  appStructs.cpp  library.cpp  market.cpp  position.cpp  stock.cpp  timeSeriesDB.cpp  user.cpp
